end basic work && add monthly report
