# routes/v1/balance.go
@@ -4,4 +4,5 @@ func (r *Route) Balance() {
 	(*r.Group).Get("/balance/:id", r.View.GetBalance)
 	(*r.Group).Put("/balance", r.View.AddBalance)
 	(*r.Group).Put("/reserve", r.View.ReserveAmount)
+	(*r.Group).Put("/restore", r.View.RestoreAmount)
 }
