# routes/v1/report.go
@@ -1,0 +1,5 @@
+package v1
+
+func (r *Route) Report() {
+	(*r.Group).Get("/report/:date", r.View.MonthlyReport)
+}
